Eclipse_C_Dev/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
16:14:39 **** Build of configuration Nios II for project gameconsole ****
make all 
Info: Building ../gameconsole_bsp/
make --no-print-directory -C ../gameconsole_bsp/
[BSP build complete]
Info: Compiling hello_world.cpp to obj/default/hello_world.o
nios2-elf-gcc -xc++ -MP -MMD -c -I../gameconsole_bsp//drivers/vip/../../drivers/vip/inc -I../gameconsole_bsp//drivers/vip/../../drivers/vip/src -I../gameconsole_bsp//HAL/inc -I../gameconsole_bsp/ -I../gameconsole_bsp//drivers/inc -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED      -O0 -g -Wall  -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world.o hello_world.cpp
Info: Linking gameconsole.elf
nios2-elf-g++ -T'../gameconsole_bsp//linker.x' -msys-crt0='../gameconsole_bsp//obj/HAL/src/crt0.o' -msys-lib=hal_bsp -L../gameconsole_bsp/   -Wl,-Map=gameconsole.map   -O0 -g -Wall  -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o gameconsole.elf obj/default/hello_world.o -lm -msys-lib=m
nios2-elf-insert gameconsole.elf --thread_model hal --cpu_name nios2_gen2_0 --qsys true --simulation_enabled false --stderr_dev jtag_uart_0 --stdin_dev jtag_uart_0 --stdout_dev jtag_uart_0 --sopc_system_name NIOSII_Test --quartus_project_dir "/home/jaschutte/Documents/School/VHDL/VoiceGame_VHDL" --jdi ../..//output_files/Main.jdi --sopcinfo /home/jaschutte/Documents/School/VHDL/VoiceGame_VHDL/software/gameconsole_bsp/../../NIOSII_Test.sopcinfo
Info: (gameconsole.elf) 68 KBytes program size (code + initialized data).
Info:                   315 KBytes free for stack + heap.
Info: Creating gameconsole.objdump
nios2-elf-objdump --disassemble --syms --all-header --source gameconsole.elf >gameconsole.objdump
[gameconsole build complete]
16:14:43 **** Incremental Build of configuration Nios II for project gameconsole ****
make all 
Info: Building ../gameconsole_bsp/
make --no-print-directory -C ../gameconsole_bsp/
[BSP build complete]
[gameconsole build complete]
16:18:32 **** Incremental Build of configuration Nios II for project gameconsole ****
make all 
Info: Building ../gameconsole_bsp/
make --no-print-directory -C ../gameconsole_bsp/
[BSP build complete]
Info: Compiling hello_world.cpp to obj/default/hello_world.o
nios2-elf-gcc -xc++ -MP -MMD -c -I../gameconsole_bsp//drivers/vip/../../drivers/vip/inc -I../gameconsole_bsp//drivers/vip/../../drivers/vip/src -I../gameconsole_bsp//HAL/inc -I../gameconsole_bsp/ -I../gameconsole_bsp//drivers/inc -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED      -O0 -g -Wall  -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world.o hello_world.cpp
hello_world.cpp: In function 'int main()':
hello_world.cpp:25:37: error: invalid conversion from 'int' to 'long unsigned int*' [-fpermissive]
   unsigned long* framebuffer_addr = 0x00100000;
                                     ^
hello_world.cpp:27:39: error: invalid conversion from 'long unsigned int*' to 'long unsigned int' [-fpermissive]
   Frame_Buffer vip(framebuffer_addr, 2);
                                       ^
In file included from hello_world.cpp:19:0:
../gameconsole_bsp//drivers/vip/../../drivers/vip/inc/Frame_Buffer.hpp:35:5: note:   initializing argument 1 of 'Frame_Buffer::Frame_Buffer(long unsigned int, bool, int)'
     Frame_Buffer(unsigned long base_address, bool writer_interface, int irq_number=-1);
     ^
make: *** [Makefile:778: obj/default/hello_world.o] Error 1
16:19:26 **** Incremental Build of configuration Nios II for project gameconsole ****
make all 
Info: Building ../gameconsole_bsp/
make --no-print-directory -C ../gameconsole_bsp/
[BSP build complete]
Info: Compiling hello_world.cpp to obj/default/hello_world.o
nios2-elf-gcc -xc++ -MP -MMD -c -I../gameconsole_bsp//drivers/vip/../../drivers/vip/inc -I../gameconsole_bsp//drivers/vip/../../drivers/vip/src -I../gameconsole_bsp//HAL/inc -I../gameconsole_bsp/ -I../gameconsole_bsp//drivers/inc -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED      -O0 -g -Wall  -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world.o hello_world.cpp
Info: Linking gameconsole.elf
nios2-elf-g++ -T'../gameconsole_bsp//linker.x' -msys-crt0='../gameconsole_bsp//obj/HAL/src/crt0.o' -msys-lib=hal_bsp -L../gameconsole_bsp/   -Wl,-Map=gameconsole.map   -O0 -g -Wall  -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o gameconsole.elf obj/default/hello_world.o -lm -msys-lib=m
nios2-elf-insert gameconsole.elf --thread_model hal --cpu_name nios2_gen2_0 --qsys true --simulation_enabled false --stderr_dev jtag_uart_0 --stdin_dev jtag_uart_0 --stdout_dev jtag_uart_0 --sopc_system_name NIOSII_Test --quartus_project_dir "/home/jaschutte/Documents/School/VHDL/VoiceGame_VHDL" --jdi ../..//output_files/Main.jdi --sopcinfo /home/jaschutte/Documents/School/VHDL/VoiceGame_VHDL/software/gameconsole_bsp/../../NIOSII_Test.sopcinfo
Info: (gameconsole.elf) 81 KBytes program size (code + initialized data).
Info:                   302 KBytes free for stack + heap.
Info: Creating gameconsole.objdump
nios2-elf-objdump --disassemble --syms --all-header --source gameconsole.elf >gameconsole.objdump
[gameconsole build complete]
16:20:25 **** Incremental Build of configuration Nios II for project gameconsole ****
make all 
Info: Building ../gameconsole_bsp/
make --no-print-directory -C ../gameconsole_bsp/
[BSP build complete]
Info: Compiling hello_world.cpp to obj/default/hello_world.o
nios2-elf-gcc -xc++ -MP -MMD -c -I../gameconsole_bsp//drivers/vip/../../drivers/vip/inc -I../gameconsole_bsp//drivers/vip/../../drivers/vip/src -I../gameconsole_bsp//HAL/inc -I../gameconsole_bsp/ -I../gameconsole_bsp//drivers/inc -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED      -O0 -g -Wall  -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world.o hello_world.cpp
Info: Linking gameconsole.elf
nios2-elf-g++ -T'../gameconsole_bsp//linker.x' -msys-crt0='../gameconsole_bsp//obj/HAL/src/crt0.o' -msys-lib=hal_bsp -L../gameconsole_bsp/   -Wl,-Map=gameconsole.map   -O0 -g -Wall  -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o gameconsole.elf obj/default/hello_world.o -lm -msys-lib=m
nios2-elf-insert gameconsole.elf --thread_model hal --cpu_name nios2_gen2_0 --qsys true --simulation_enabled false --stderr_dev jtag_uart_0 --stdin_dev jtag_uart_0 --stdout_dev jtag_uart_0 --sopc_system_name NIOSII_Test --quartus_project_dir "/home/jaschutte/Documents/School/VHDL/VoiceGame_VHDL" --jdi ../..//output_files/Main.jdi --sopcinfo /home/jaschutte/Documents/School/VHDL/VoiceGame_VHDL/software/gameconsole_bsp/../../NIOSII_Test.sopcinfo
Info: (gameconsole.elf) 81 KBytes program size (code + initialized data).
Info:                   302 KBytes free for stack + heap.
Info: Creating gameconsole.objdump
nios2-elf-objdump --disassemble --syms --all-header --source gameconsole.elf >gameconsole.objdump
[gameconsole build complete]
16:24:56 **** Incremental Build of configuration Nios II for project gameconsole ****
make all 
Info: Building ../gameconsole_bsp/
make --no-print-directory -C ../gameconsole_bsp/
[BSP build complete]
Info: Compiling hello_world.cpp to obj/default/hello_world.o
nios2-elf-gcc -xc++ -MP -MMD -c -I../gameconsole_bsp//drivers/vip/../../drivers/vip/inc -I../gameconsole_bsp//drivers/vip/../../drivers/vip/src -I../gameconsole_bsp//HAL/inc -I../gameconsole_bsp/ -I../gameconsole_bsp//drivers/inc -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED      -O0 -g -Wall  -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world.o hello_world.cpp
hello_world.cpp: In function 'int main()':
hello_world.cpp:39:14: error: invalid type argument of unary '*' (have 'long unsigned int')
    *(test + i) = 0xff;
              ^
make: *** [Makefile:778: obj/default/hello_world.o] Error 1
16:25:26 **** Incremental Build of configuration Nios II for project gameconsole ****
make all 
Info: Building ../gameconsole_bsp/
make --no-print-directory -C ../gameconsole_bsp/
[BSP build complete]
Info: Compiling hello_world.cpp to obj/default/hello_world.o
nios2-elf-gcc -xc++ -MP -MMD -c -I../gameconsole_bsp//drivers/vip/../../drivers/vip/inc -I../gameconsole_bsp//drivers/vip/../../drivers/vip/src -I../gameconsole_bsp//HAL/inc -I../gameconsole_bsp/ -I../gameconsole_bsp//drivers/inc -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED      -O0 -g -Wall  -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world.o hello_world.cpp
Info: Linking gameconsole.elf
nios2-elf-g++ -T'../gameconsole_bsp//linker.x' -msys-crt0='../gameconsole_bsp//obj/HAL/src/crt0.o' -msys-lib=hal_bsp -L../gameconsole_bsp/   -Wl,-Map=gameconsole.map   -O0 -g -Wall  -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o gameconsole.elf obj/default/hello_world.o -lm -msys-lib=m
nios2-elf-insert gameconsole.elf --thread_model hal --cpu_name nios2_gen2_0 --qsys true --simulation_enabled false --stderr_dev jtag_uart_0 --stdin_dev jtag_uart_0 --stdout_dev jtag_uart_0 --sopc_system_name NIOSII_Test --quartus_project_dir "/home/jaschutte/Documents/School/VHDL/VoiceGame_VHDL" --jdi ../..//output_files/Main.jdi --sopcinfo /home/jaschutte/Documents/School/VHDL/VoiceGame_VHDL/software/gameconsole_bsp/../../NIOSII_Test.sopcinfo
Info: (gameconsole.elf) 81 KBytes program size (code + initialized data).
Info:                   302 KBytes free for stack + heap.
Info: Creating gameconsole.objdump
nios2-elf-objdump --disassemble --syms --all-header --source gameconsole.elf >gameconsole.objdump
[gameconsole build complete]
